--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="menu">
-  <div class="menu__link">Главная</div>
-  <div class="menu__link">О нас</div>
-  <div class="menu__link">Контакты</div>
+  <a routerLink="" class="menu__link">Главная</a>
+  <a routerLink="about" class="menu__link">О нас</a>
+  <a routerLink="contacts" class="menu__link">Контакты</a>
 </div>
