feat: test render ngFor

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,12 @@
-<div class="main">Главная</div>
+<div class="main">
+  <div class="main__title">Главная</div>
+  <div class="main__content">
+    <div class="main__text">{{ name }}</div>
+    <button class="main__button" (click)="sayName()">Кнопка</button>
+    <button class="main__button" (click)="say('Hell World')">Кнопка2</button>
+    <div *ngFor="let item of data">
+      <div>{{ item.title }}</div>
+      <div>{{ item.description }}</div>
+    </div>
+  </div>
+</div>
