--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,6 @@
 .main {
   min-height: calc(100vh - 140px);
-  font-size: 50px;
+  font-size: 20px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -8,7 +8,7 @@
   gap: 10px;
 
   &__title {
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 600;
   }
 
@@ -22,5 +22,11 @@
     cursor: pointer;
     border: 1px solid black;
     width: 150px;
+  }
+
+  &__input {
+    width: 200px;
+    font-size: 25px;
+    border: 1px solid black;
   }
 }
