feat: event input

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -7,7 +7,7 @@
       type="text"
       placeholder="Поиск"
       class="main__input"
-      (change)="handleSearch($event)"
+      (input)="handleSearch($event)"
     />
     <div *ngFor="let item of data">
       <div>{{ item["#TITLE"] }}</div>
