--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -5,28 +5,58 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  gap: 10px;
 
-  &__title {
-    font-size: 25px;
-    font-weight: 600;
-  }
-
-  &__content {
+  &__settings {
+    border-bottom: 1px solid var(--border-color);
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    padding: 10px;
   }
 
   &__button {
     cursor: pointer;
-    border: 1px solid black;
-    width: 150px;
+    background-color: var(--primary-color);
+    color: white;
+    width: 70px;
+    height: 30px;
+    border-radius: 5px;
   }
 
   &__input {
-    width: 200px;
-    font-size: 25px;
-    border: 1px solid black;
+    width: 215px;
+    height: 30px;
+    padding: 0px 5px;
+    font-size: 18px;
+    border: 1px solid var(--border-color);
+    border-radius: 2px;
+  }
+
+  &__content {
+    max-width: 1920px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0px;
+  }
+
+  &__card {
+    width: 24%;
+
+    @media (max-width: 1599px) {
+      width: 32%;
+    }
+
+    @media (max-width: 1199px) {
+      width: 48%;
+    }
+
+    @media (max-width: 767px) {
+      width: 100%;
+    }
   }
 }
