--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -4,10 +4,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
   gap: 10px;
+  min-height: 550px;
 
   &__title {
     font-size: 25px;
@@ -29,6 +30,10 @@
   &__img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: fill;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.08);
+    }
   }
 }
