--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,3 +91,6 @@ h6 {
 body {
   margin: 0px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
