--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -1,8 +1,9 @@
 .contacts {
   background-color: var(--primary-background-color);
   min-height: calc(100vh - 140px);
-  font-size: 50px;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  padding: 10px;
 }
