--- a/src/app/pages/main/card/card.component.scss
+++ b/src/app/pages/main/card/card.component.scss
@@ -1,7 +1,19 @@
+:host {
+  width: 24%;
+  @media (max-width: 1599px) {
+    width: 32%;
+  }
+  @media (max-width: 1199px) {
+    width: 46%;
+  }
+  @media (max-width: 767px) {
+    width: 94%;
+  }
+}
+
 .card {
   border: 1px solid var(--border-color);
   border-radius: 5px;
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
