--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -13,9 +13,9 @@
 
   <div class="main__content" *ngIf="!isLoading; else spinner">
     <ng-container *ngIf="data.length; else notFound">
-      <div class="main__card" *ngFor="let item of data">
+      <ng-container *ngFor="let item of data">
         <app-card [movie]="item"></app-card>
-      </div>
+      </ng-container>
     </ng-container>
     <ng-template #notFound> No results </ng-template>
   </div>
